Subo el paso3 Pruebas de Integración con WebTestClient y documentacion del codigo

--- a/product-api/pom.xml
+++ b/product-api/pom.xml
@@ -35,27 +35,23 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <!-- Spring Boot para MongoDB -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
-
     <!-- Lombok para reducir código repetitivo -->
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <scope>provided</scope>
     </dependency>
-    
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-devtools</artifactId>
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
-
     <!-- Dependencias para pruebas -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -68,21 +64,18 @@
             </exclusion>
         </exclusions>
     </dependency>
-
     <!-- JUnit 5 para pruebas -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <scope>test</scope>
     </dependency>
-
     <!-- Mockito para pruebas unitarias -->
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <scope>test</scope>
     </dependency>
-
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
@@ -93,12 +86,21 @@
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
-
 	<!-- Driver de base de datos H2 (opcional, para pruebas en memoria) -->
 	<dependency>
     	<groupId>com.h2database</groupId>
     	<artifactId>h2</artifactId>
     	<scope>runtime</scope>
+	</dependency>
+		<dependency>
+    	<groupId>com.jayway.jsonpath</groupId>
+    	<artifactId>json-path</artifactId>
+    	<version>2.7.0</version>
+    	<scope>test</scope>
+	</dependency>
+	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-webflux</artifactId>
 	</dependency>
 </dependencies>
 
